CRUD done, needs checking

--- a/templates/editmenuitem.html
+++ b/templates/editmenuitem.html
@@ -3,13 +3,12 @@
 
 <h1>Edit menu item from {{restaurant.id}}</h1>
 <form method='post'>
-    <input type='text' size='30' name='edit_menu_item_name'
-        placeholder="{{item.name}}">
-    <input type='text' size='10' name='edit_menu_item_price'
-        placeholder="{{item.price}}">
+    <input type='text' size='30' name='edit_item_name'
+        value="{{item.name}}">
+    <input type='text' size='10' name='edit_item_price'
+        value="{{item.price}}">
     <br>
-    <textarea name='edit_menu_item_description'
-        placeholder="{{item.description}}"></textarea>
+    <textarea name='edit_item_description'>{{item.description}}</textarea>
     <br>
     <input type='submit' value='Edit'>
 </form>
