--- a/templates/newmenuitem.html
+++ b/templates/newmenuitem.html
@@ -3,11 +3,11 @@
 
 <h1>Add a menu item</h1>
 <form method='post'>
-    <input type='text' size='30' name='menu_item_name' placeholder="Item Name">
-    <input type='text' size='10' name='menu_item_price'
+    <input type='text' size='30' name='item_name' placeholder="Item Name">
+    <input type='text' size='10' name='item_price'
         placeholder="Item Price">
     <br>
-    <textarea name='menu_item_description'
+    <textarea name='item_description'
         placeholder="Item Description"></textarea>
     <br>
     <input type='submit' value='Add'>
