--- a/templates/newrestaurant.html
+++ b/templates/newrestaurant.html
@@ -4,7 +4,7 @@
 
 <h1>Add New Restaurant</h1>
 <form method='post'>
-    <input type='text' size='30' name='Restaurant_name' placeholder="Restaurant name">
+    <input type='text' size='30' name='restaurant_name' placeholder="Restaurant name">
     <input type='submit' value='Create'>
 </form>
 
