--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -1,10 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
 
+<div>
+    <a href = "{{url_for('newRestaurant')}}">Create new restaurant</a>
+</div>
+
 {% for restaurant in restaurants %}
     <div>{{restaurant.name}}</div>
     <p>
-        <a href="#">Edit Restaurant Name</a>
+        <a href="{{url_for('editRestaurant', restaurant_id = restaurant.id)}}">
+            Edit Restaurant Name
+        </a>
+        <a href="{{url_for('deleteRestaurant', restaurant_id = restaurant.id)}}">
+            Delete
+        </a>
     </p>
 {% endfor %}
 
