--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,11 @@
             rel="stylesheet">
        <link type='text/css' rel="stylesheet" href="/static/style.css">
 
+       <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
+       </script>
+       <script src="https://apis.google.com/js/client:platform.js?onload=start"
+            async defer>
+        </script>
 
 
     </head>
