--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,21 @@
     </head>
 
     <body>
+        <div class='row top-menu'>
+            <div class='col-md-6'>
+                <a href="{{url_for('showRestaurants')}}">
+                    <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                    Show All Restaurants
+                </a>
+            </div>
+            <div class='col-md-6 text-right'>
+                {% if 'username' not in session %}
+                <a href="{{url_for('showLogin')}}">Click Here to Log In</a>
+                {% else %}
+                <a href="{{url_for('disconnect')}}">Disconnect</a>
+                {% endif %}
+            </div>
+        </div>
 
         <div class="col-md-8 col-md-offset-2">
             {% block content %}
