--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -12,20 +12,20 @@
 {% endwith %}
 
 <div>
-    <a href = "{{url_for('newRestaurant')}}">Create new restaurant</a>
+    <a href = "{{url_for('newPlaylist')}}">Create new Playlist</a>
 </div>
 
-{% for restaurant in restaurants %}
+{% for playlist in playlists %}
     <div>
-        <a href="{{url_for('showMenu', restaurant_id = restaurant.id)}}">
-            {{restaurant.name}}
+        <a href="{{url_for('showSongs', playlist_id = playlist.id)}}">
+            {{playlist.name}}
         </a>
     </div>
     <p>
-        <a href="{{url_for('editRestaurant', restaurant_id = restaurant.id)}}">
-            Edit Restaurant Name
+        <a href="{{url_for('editPlaylist', playlist_id = playlist_id)}}">
+            Edit Playlist Name
         </a>
-        <a href="{{url_for('deleteRestaurant', restaurant_id = restaurant.id)}}">
+        <a href="{{url_for('deletePlaylist', playlist_id = playlist_id)}}">
             Delete
         </a>
     </p>
