--- a/templates/publicrestaurants.html
+++ b/templates/publicrestaurants.html
@@ -11,7 +11,7 @@
 	<div class="row banner main">
 		<div class="col-md-1"></div>
 		<div class="col-md-11 padding-none">
-			<h1>Restaurants</h1>
+			<h1>Playlists</h1>
 		</div>
 	</div>
 
@@ -38,12 +38,12 @@
 		</div>
 		<div class="col-md-1"></div>
 	</div>
-	{% for restaurant in restaurants %}
-		<a href = "{{url_for('showMenu', restaurant_id = restaurant.id)}}">
+	{% for playlist in playlists %}
+		<a href = "{{url_for('showSongs', playlist_id = playlist.id)}}">
 			<div class="row">
 				<div class="col-md-1"></div>
 					<div class="col-md-10 restaurant-list">
-						<h3>{{restaurant.name}}</h3>
+						<h3>{{playlist.name}}</h3>
 					</div>
 				<div class="col-md-1"></div>
 			</div>
