finished delete song

--- a/templates/deletesong.html
+++ b/templates/deletesong.html
@@ -2,10 +2,10 @@
 {% block content %}
 
 <h1>Delete Menu Item</h1>
-<h3>Are you sure you want to delete {{item.name}}?</h3>
+<h3>Are you sure you want to delete {{song.title}}?</h3>
 <h4 id='warning'>This cannot be undone</h4>
 <form method='post'>
-    <input type='submit' name='delete_menu_item' value='Delete'>
+    <input type='submit' name='delete_song' value='Delete'>
 </form>
 
 
