--- a/templates/newplaylist.html
+++ b/templates/newplaylist.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 
-<h1>Add New Restaurant</h1>
+<h1>Add New Playlist</h1>
 <form method='post'>
     <input type='text' size='30' name='playlist_name' placeholder="Playlist name">
     <input type='submit' value='Create'>
