--- a/templates/newplaylist.html
+++ b/templates/newplaylist.html
@@ -5,6 +5,7 @@
 <h1>Add New Playlist</h1>
 <form method='post'>
     <input type='text' size='30' name='playlist_name' placeholder="Playlist name">
+    <textarea name="playlist_description" placeholder='Playlist description'></textarea>
     <input type='submit' value='Create'>
 </form>
 
