--- a/templates/publicsongs.html
+++ b/templates/publicsongs.html
@@ -3,12 +3,13 @@
 	</div>
 	<div class="row banner menu">
 		<div class="col-md-11 col-md-offset-1 padding-none">
-			<h1>{{ restaurant.name }}
-			<figure class="creator">
-				<img src="{{ creator.picture}}">
-				<figcaption>{{ creator.name }}</figcaption>
-			</figure>
-			</h1>
+			<h1 class='playlist-title'>{{ playlist.name }}</h1>
+			<h3>
+				<figure class="creator">
+					<img src="{{ creator.picture}}">
+					<figcaption>{{ creator.name }}</figcaption>
+				</figure>
+			</h3>
 
 		</div>
 	</div>
@@ -32,59 +33,20 @@
 			{% endwith %}
 		</div>
 	</div>
-	{% if items !=[] %}
-		<div class="row">
-			<div class="col-md-1"></div>
-			<div class="col-md-3">
-				<h2>Appetizers</h2>
-					{% for i in items %}
-						{% if i.course == 'Appetizer' %}
-							<div class="menu-item">
-								<h3>{{i.name}}</h3>
-								<p>{{i.description}}</p>
-								<p class="menu-price">{{i.price}}</p>
-
-							</div>
-						{% endif %}
-					{% endfor %}
-			</div>
-			<div class="col-md-4">
-				<h2>Entrees</h2>
-					{% for i in items %}
-						{% if i.course == 'Entree' %}
-						<div class="menu-item">
-							<h3>{{i.name}}</h3>
-							<p>{{i.description}}</p>
-							<p class="menu-price">{{i.price}}</p>
-
-						</div>
-						{% endif %}
-					{% endfor %}
-			</div>
-			<div class="col-md-3">
-				<h2>Desserts</h2>
-					{% for i in items %}
-						{% if i.course == 'Dessert' %}
-						<div class="menu-item">
-							<h3>{{i.name}}</h3>
-							<p>{{i.description}}</p>
-							<p class="menu-price">{{i.price}}</p>
-
-						</div>
-						{% endif %}
-					{% endfor %}
-				<h2>Beverages</h2>
-					{% for i in items %}
-						{% if i.course == 'Beverage' %}
-						<div class="menu-item">
-							<h3>{{i.name}}</h3>
-							<p>{{i.description}}</p>
-							<p class="menu-price">{{i.price}}</p>
-
-						</div>
-						{% endif %}
-					{% endfor %}
-			</div>
-			<div class="col-md-1"></div>
+	{% if songs !=[] %}
+		{% for song in songs %}
+		<div>
+			<h3>{{song.title}}</h3>
+			<p>By: {{song.artist}}</p>
+			<p>Gere: {{song.genre}}</p>
+			{% if song.youtube %}
+				<p>Youtube Link: {{song.youtube}}</p>
+			{% endif %}
+			{% if song.rendition %}
+				<p>Rendition of: {{song.rendition}}
+			{% endif %}
 		</div>
+		<hr>
+		<br>
+		{% endfor %}
 	{% endif %}
