--- a/templates/base.html
+++ b/templates/base.html
@@ -33,9 +33,9 @@
     <body>
         <div class='row top-menu'>
             <div class='col-md-6'>
-                <a href="{{url_for('showRestaurants')}}">
+                <a href="{{url_for('showPlaylists')}}">
                     <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-                    Show All Restaurants
+                    Show All Playlists
                 </a>
             </div>
             <div class='col-md-6 text-right'>
