--- a/templates/newsong.html
+++ b/templates/newsong.html
@@ -4,7 +4,7 @@
 <h1>{{playlist.name}}</h1>
 <h2>Add a song</h2>
 <form method='post'>
-    <input type='text' size='30' name='song_name' placeholder="Song Name">
+    <input type='text' size='30' name='title' placeholder="Song Title">
     <input type='text' size='30' name='artist' placeholder="Artist">
     <input type='text' size='30' name='genre' placeholder="Genre">
     <input type='text' size='30' name='youtube' placeholder="Youtube Link">
