--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,7 @@
        <script src="https://apis.google.com/js/client:platform.js?onload=start"
             async defer>
         </script>
+        <script src="//apis.google.com/js/platform.js?onload=start"></script>
 
 
     </head>
