--- a/templates/publicplaylists.html
+++ b/templates/publicplaylists.html
@@ -1,51 +1,41 @@
+{% extends "base.html" %}
+{% block content %}
 
-<div class="row top-menu">
-		<div class="col-md-10"></div>
-		<div class="col-md-2 text-right">
-			<a href="{{url_for('showLogin')}}">Click Here to Log in </a>
-		</div>
-	</div>
-	<div class="row divider blue">
-		<div class="col-md-12"></div>
-	</div>
-	<div class="row banner main">
-		<div class="col-md-1"></div>
-		<div class="col-md-11 padding-none">
-			<h1>Playlists</h1>
-		</div>
-	</div>
-
-	<div class = 'flash'>
-		      {% with messages = get_flashed_messages() %}
-      {% if messages %}
-
-        <ul>
+<div class='col-md-offset-4 col-md-4 text-center'>
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul>
         {% for message in messages %}
-            <li> <strong> {{ message }} </strong> </li>
+        <li><strong>{{message}}</strong></li>
         {% endfor %}
-        </ul>
-        {% endif %}
-    {% endwith %}
+    </ul>
+    {% endif %}
+{% endwith %}
+</div>
+<br>
 
+
+<div class='text-center'>
+    <h1>Playlists</h1>
 </div>
 
 
+{% for playlist in playlists %}
+    <div class='container'>
+        <div class='top-playlist'>
+            <h3>
+                <a href="{{url_for('showSongs', playlist_id = playlist.id)}}">
+                    {{playlist.name}}
+                </a>
+            </h3>
 
-	<div class="row padding-top padding-bottom">
-		<div class="col-md-1"></div>
-		<div class="col-md-10 padding-none">
+            <h5>Description:</h5>
+            <p>{{playlist.description}}</p>
 
-		</div>
-		<div class="col-md-1"></div>
-	</div>
-	{% for playlist in playlists %}
-		<a href = "{{url_for('showSongs', playlist_id = playlist.id)}}">
-			<div class="row">
-				<div class="col-md-1"></div>
-					<div class="col-md-10 restaurant-list">
-						<h3>{{playlist.name}}</h3>
-					</div>
-				<div class="col-md-1"></div>
-			</div>
-		</a>
-	{% endfor %}
+        </div>
+        <hr>
+    </div>
+
+{% endfor %}
+
+{% endblock %}
