--- a/templates/newplaylist.html
+++ b/templates/newplaylist.html
@@ -1,12 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
 
-
-<h1>Add New Playlist</h1>
-<form method='post'>
-    <input type='text' size='30' name='playlist_name' placeholder="Playlist name">
-    <textarea name="playlist_description" placeholder='Playlist description'></textarea>
-    <input type='submit' value='Create'>
-</form>
-
+<div class='container-fluid'>
+    <div class='col-md-6 col-md-offset-3 text-center'>
+        <h1>Add New Playlist</h1>
+        <form method='post'>
+            <input type='text' size='30' name='playlist_name' placeholder="Playlist name">
+            <br>
+            <br>
+            <textarea name="playlist_description" placeholder='Playlist description'></textarea>
+            <br>
+            <input type='submit' value='Create'>
+        </form>
+    </div>
+</div>
 {% endblock %}
