--- a/templates/newsong.html
+++ b/templates/newsong.html
@@ -1,16 +1,23 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>{{playlist.name}}</h1>
-<h2>Add a song</h2>
-<form method='post'>
-    <input type='text' size='30' name='title' placeholder="Song Title">
-    <input type='text' size='30' name='artist' placeholder="Artist">
-    <input type='text' size='30' name='genre' placeholder="Genre">
-    <input type='text' size='30' name='youtube' placeholder="Youtube Link">
-    <input type="text" size='30' name='rendition' placeholder="Rendition of">
-    <br>
-    <input type='submit' value='Add'>
-</form>
-
+<div class='container-fluid'>
+    <div class='col-md-6 col-md-offset-3 text-center'>
+        <h1>{{playlist.name}}</h1>
+        <h2>Add a song</h2>
+        <form method='post'>
+            <input type='text' size='30' name='title' placeholder="Song Title">
+            <br>
+            <input type='text' size='30' name='artist' placeholder="Artist">
+            <br>
+            <input type='text' size='30' name='genre' placeholder="Genre">
+            <br>
+            <input type='text' size='30' name='youtube' placeholder="Youtube Link">
+            <br>
+            <input type="text" size='30' name='rendition' placeholder="Rendition of">
+            <br>
+            <input type='submit' value='Add'>
+        </form>
+    </div>
+</div>
 {% endblock %}
