--- a/templates/publicsongs.html
+++ b/templates/publicsongs.html
@@ -1,52 +1,55 @@
-<div class="row divider green">
-		<div class="col-md-12"></div>
-	</div>
+{% extends "base.html" %}
+{% block content %}
+
+<div class='container-fluid'>
 	<div class="row banner menu">
-		<div class="col-md-11 col-md-offset-1 padding-none">
+		<div class="col-md-11">
 			<h1 class='playlist-title'>{{ playlist.name }}</h1>
 			<h3>
 				<figure class="creator">
-					<img src="{{ creator.picture}}">
-					<figcaption>{{ creator.name }}</figcaption>
+					<figcaption>By: {{ creator.name }}</figcaption>
 				</figure>
 			</h3>
-
 		</div>
 	</div>
-	<div class="row padding-top padding-bottom">
-		<div class="col-md-1"></div>
-		<div class="col-md-11 padding-none">
 
-		</div>
-		<div class="col-md-7"></div>
+
+
+	<div class='col-md-offset-4 col-md-4 text-center'>
+	{% with messages = get_flashed_messages() %}
+	    {% if messages %}
+	    <ul>
+	        {% for message in messages %}
+	        <li><strong>{{message}}</strong></li>
+	        {% endfor %}
+	    </ul>
+	    {% endif %}
+	{% endwith %}
 	</div>
-	<div class="row">
-		<div class="col-md-12">
-			{% with messages = get_flashed_messages() %}
-				{% if messages %}
-					<ul>
-						{% for message in messages %}
-							 <li> <strong> {{ message }} </strong> </li>
-						{% endfor %}
-					</ul>
+	<br>
+
+	<div class='songs'>
+		{% if songs !=[] %}
+			{% for song in songs %}
+			<div>
+				<a href="{{url_for('showSingle', playlist_id = song.playlist_id, song_id = song.id)}}">
+					<h3>{{song.title}}</h3>
+				</a>
+				<p>By: {{song.artist}}</p>
+				<p>Gere: {{song.genre}}</p>
+				{% if song.youtube %}
+					<p>Youtube Link: {{song.youtube}}</p>
 				{% endif %}
-			{% endwith %}
-		</div>
+				{% if song.rendition %}
+					<p>Rendition of: {{song.rendition}}
+				{% endif %}
+			</div>
+			<hr>
+			<br>
+			{% endfor %}
+		{% endif %}
 	</div>
-	{% if songs !=[] %}
-		{% for song in songs %}
-		<div>
-			<h3>{{song.title}}</h3>
-			<p>By: {{song.artist}}</p>
-			<p>Gere: {{song.genre}}</p>
-			{% if song.youtube %}
-				<p>Youtube Link: {{song.youtube}}</p>
-			{% endif %}
-			{% if song.rendition %}
-				<p>Rendition of: {{song.rendition}}
-			{% endif %}
-		</div>
-		<hr>
-		<br>
-		{% endfor %}
-	{% endif %}
+
+</div>
+
+{% endblock %}
