--- a/templates/songs.html
+++ b/templates/songs.html
@@ -1,47 +1,75 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>{{playlist.name}}</h1>
 
-{% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <ul>
-        {% for message in messages %}
-        <li><strong>{{message}}</strong></li>
-        {% endfor %}
-    </ul>
-    {% endif %}
-{% endwith %}
-
-<div>
-    <a href="{{url_for('newSong', playlist_id = playlist.id)}}">
-        Add new song
-    </a>
-</div>
-
-
-{% for song in songs %}
-    <div>
-        <h3>{{song.title}}</h3>
-        <p>By: {{song.artist}}</p>
-        <p>Gere: {{song.genre}}</p>
-        {% if song.youtube %}
-            <p>Youtube Link: {{song.youtube}}</p>
-        {% endif %}
-        {% if song.rendition %}
-            <p>Rendition of: {{song.rendition}}
-        {% endif %}
-        <div>
-            <a href="{{url_for('editSong', playlist_id = playlist.id, song_id = song.id)}}">
-                Edit
+<div class='container-fluid'>
+	<div class="row banner menu">
+		<div class="text-center">
+			<h1 class='playlist-title'>{{ playlist.name }}</h1>
+			<h3>
+				<figure class="creator">
+					<figcaption>By: {{ creator.name }}</figcaption>
+				</figure>
+			</h3>
+            <a href="{{url_for('newSong', playlist_id = playlist.id)}}">
+                Add new song
             </a>
-            <a href="{{url_for('deleteSong', playlist_id = playlist.id, song_id = song.id)}}">
-                Delete
-            </a>
-        </div>
-    </div>
+		</div>
+	</div>
+
+
+
+	<div class='col-md-offset-4 col-md-4 text-center'>
+	{% with messages = get_flashed_messages() %}
+	    {% if messages %}
+	    <ul>
+	        {% for message in messages %}
+	        <li><strong>{{message}}</strong></li>
+	        {% endfor %}
+	    </ul>
+	    {% endif %}
+	{% endwith %}
+	</div>
+	<br>
     <br>
 
-{% endfor %}
+	<div class='songs col-md-offset-1'>
+        <div class='text-center'>
+
+        </div>
+		{% if songs !=[] %}
+			{% for song in songs %}
+			<div>
+				<a href="{{url_for('showSingle', playlist_id = song.playlist_id, song_id = song.id)}}">
+					<h3>{{song.title}}</h3>
+				</a>
+				<p>By: {{song.artist}}</p>
+				<p>Gere: {{song.genre}}</p>
+				{% if song.youtube %}
+					<p>Youtube Link: {{song.youtube}}</p>
+				{% endif %}
+				{% if song.rendition %}
+					<p>Rendition of: {{song.rendition}}
+				{% endif %}
+                <div>
+                    <a href="{{url_for('editSong',
+                            playlist_id = playlist.id,
+                            song_id = song.id)}}">
+                        Edit
+                    </a>
+                    <a class='delete' href="{{url_for('deleteSong',
+                                playlist_id = playlist.id,
+                                song_id = song.id)}}">
+                        Delete
+                    </a>
+                </div>
+			</div>
+			<hr>
+			<br>
+			{% endfor %}
+		{% endif %}
+	</div>
+
+</div>
 
 {% endblock %}
