--- a/templates/newplaylist.html
+++ b/templates/newplaylist.html
@@ -8,9 +8,9 @@
             <input type='text' size='30' name='playlist_name' placeholder="Playlist name">
             <br>
             <br>
-            <textarea name="playlist_description" placeholder='Playlist description'></textarea>
+            <textarea id='description-text' name="playlist_description" placeholder='Playlist description'></textarea>
             <br>
-            <input type='submit' value='Create'>
+            <input class='create-button' type='submit' value='Create'>
         </form>
     </div>
 </div>
