--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -1,46 +1,49 @@
 {% extends "base.html" %}
 {% block content %}
-
-<div class='col-md-offset-4 col-md-4 text-center'>
-{% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <ul>
-        {% for message in messages %}
-        <li><strong>{{message}}</strong></li>
-        {% endfor %}
-    </ul>
-    {% endif %}
-{% endwith %}
-</div>
-<br>
-
-
-<div class='text-center'>
-    <h1>Playlists</h1>
-    <a href = "{{url_for('newPlaylist')}}">Create New Playlist</a>
-</div>
+<div class='container-fluid playlists'>
+    <div class='col-md-offset-4 col-md-4 text-center'>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li><strong>{{message}}</strong></li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+    {% endwith %}
+    </div>
+    <br>
 
 
-{% for playlist in playlists %}
+    <div class='text-center'>
+        <h1>Playlists</h1>
+        <a href = "{{url_for('newPlaylist')}}">Create New Playlist</a>
+    </div>
+
+
+    {% for playlist in playlists %}
     <div class='container'>
         <div class='top-playlist'>
-            <h3>
+            <h2>
                 <a href="{{url_for('showSongs', playlist_id = playlist.id)}}">
                     {{playlist.name}}
                 </a>
-            </h3>
+            </h2>
 
-            <h4>Description:</h4>
-            <p>{{playlist.description}}</p>
+            <div class='playlist-description'>
+                <h3 class='playlist-description'>Description: </h3>
+                <p class='playlist-description'>{{playlist.description}}</p>
+            </div>
 
             <div class='row'>
-                <div class='col-md-2'>
-                    <a href="{{url_for('editPlaylist', playlist_id = playlist.id)}}">
+                <div class='col-md-4 play-button' >
+                    <a
+                        href="{{url_for('editPlaylist', playlist_id = playlist.id)}}">
                         Edit Playlist
                     </a>
-                </div>
-                <div class='col-md-1'>
-                    <a class='delete' href="{{url_for('deletePlaylist', playlist_id = playlist.id)}}">
+                    |
+                    <a class='delete'
+                        href="{{url_for('deletePlaylist', playlist_id = playlist.id)}}">
                         Delete
                     </a>
                 </div>
@@ -48,6 +51,8 @@
         </div>
         <hr>
     </div>
+
+</div>
 
 {% endfor %}
 
