--- a/templates/songs.html
+++ b/templates/songs.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-
-<div class='container-fluid'>
+<div class='container-fluid songs-page'>
 	<div class="row banner menu">
 		<div class="text-center">
 			<h1 class='playlist-title'>{{ playlist.name }}</h1>
@@ -57,6 +56,7 @@
                             song_id = song.id)}}">
                         Edit
                     </a>
+					|
                     <a class='delete' href="{{url_for('deleteSong',
                                 playlist_id = playlist.id,
                                 song_id = song.id)}}">
