--- a/templates/editplaylist.html
+++ b/templates/editplaylist.html
@@ -1,12 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
-
-<h1>Edit Playlist</h1>
-<form method='post'>
-    <input type='text' size='30' name='edit_playlist_name' placeholder="{{playlist.name}}">
-    <textarea name="edit_playlist_description">{{playlist.description}}</textarea>
-    <input type='submit' value='Edit'>
-</form>
+<div class='container-fluid text-center'>
+    <h1>Edit Playlist</h1>
+    <form method='post'>
+        <input type='text' size='30' name='edit_playlist_name' placeholder="{{playlist.name}}">
+        <br>
+        <br>
+        <textarea class='description-text' name="edit_playlist_description">{{playlist.description}}</textarea>
+        <br>
+        <input class='CRUD-button' type='submit' value='Edit'>
+    </form>
+</div>
 
 
 {% endblock %}
