--- a/templates/deleteplaylist.html
+++ b/templates/deleteplaylist.html
@@ -1,11 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
-
-<h1>Delete Playlist</h1>
-<h3>Are you sure you want to delete {{playlist.name}}?</h3>
-<h4 id='warning'>This cannot be undone</h4>
-<form method='post'>
-    <input type='submit' name='delete_playlist' value='Delete'>
-</form>
+<div class='container-fluid text-center'>
+    <h1>Delete Playlist</h1>
+    <h3>
+        Are you sure you want to delete
+            <span class='warning'>{{playlist.name}}</span>?
+    </h3>
+    <h4 class='warning'>This cannot be undone</h4>
+    <form method='post'>
+        <input class='warning' type='submit' name='delete_playlist' value='Delete'>
+    </form>
+</div>
 
 {% endblock %}
