--- a/templates/deletesong.html
+++ b/templates/deletesong.html
@@ -1,12 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
-
-<h1>Delete Menu Item</h1>
-<h3>Are you sure you want to delete {{song.title}}?</h3>
-<h4 id='warning'>This cannot be undone</h4>
-<form method='post'>
-    <input type='submit' name='delete_song' value='Delete'>
-</form>
+<div class='container-fluid text-center'>
+    <h1>Delete Menu Item</h1>
+    <h3>
+        Are you sure you want to delete
+            <span class='warning'>{{song.title}}</span>?
+    </h3>
+    <h4 class='warning'>This cannot be undone</h4>
+    <form method='post'>
+        <input class='warning' type='submit' name='delete_song' value='Delete'>
+    </form>
+</div>
 
 
 
