--- a/templates/newplaylist.html
+++ b/templates/newplaylist.html
@@ -8,7 +8,7 @@
             <input type='text' size='30' name='playlist_name' placeholder="Playlist name">
             <br>
             <br>
-            <textarea id='description-text' name="playlist_description" placeholder='Playlist description'></textarea>
+            <textarea class='description-text' name="playlist_description" placeholder='Playlist description'></textarea>
             <br>
             <input class='create-button' type='submit' value='Create'>
         </form>
