--- a/templates/newsong.html
+++ b/templates/newsong.html
@@ -6,17 +6,22 @@
         <h1>{{playlist.name}}</h1>
         <h3>Add a song</h3>
         <form method='post'>
-            <input type='text' class='input-song' name='title' placeholder="Song Title (Required)">
+            <input type='text' class='input-song' name='title'
+                placeholder="Song Title (Required)">
             <br>
-            <input type='text' class='input-song' name='artist' placeholder="Artist (Required)">
+            <input type='text' class='input-song' name='artist'
+                placeholder="Artist (Required)">
             <br>
-            <input type='text' class='input-song' name='genre' placeholder="Genre">
+            <input type='text' class='input-song' name='genre'
+                placeholder="Genre">
             <br>
-            <input type='text' class='input-song' name='youtube' placeholder="Youtube Link">
+            <input type='text' class='input-song' name='youtube'
+                placeholder="Youtube Link">
             <br>
-            <input type="text" class='input-song' name='rendition' placeholder="Rendition of">
+            <input type="text" class='input-song' name='rendition'
+                placeholder="Rendition of">
             <br>
-            <input id='add-song' type='submit' value='Add'>
+            <input id='add-song CRUD-button' type='submit' value='Add'>
         </form>
     </div>
 </div>
