--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
                         Aural History
                     </a>
                 </div>
-                <div class='col-md-4 col-md-offset-3 logit'>
+                <div class='col-md-offset-4 col-md-3 text-right logit'>
                     {% if 'username' not in session %}
                     <a class='log' href="{{url_for('showLogin')}}">Log In</a>
                     {% else %}
