--- a/templates/deleteplaylist.html
+++ b/templates/deleteplaylist.html
@@ -7,9 +7,16 @@
             <span class='warning'>{{playlist.name}}</span>?
     </h3>
     <h4 class='warning'>This cannot be undone</h4>
-    <form method='post'>
-        <input class='warning' type='submit' name='delete_playlist' value='Delete'>
-    </form>
+    <div class='row'>
+        <div class='col-md-1 col-md-offset-5'>
+            <a href="{{url_for('showSongs', playlist_id = playlist.id)}}">Cancel</a>
+        </div>
+        <div class='col-md-1'>
+            <form method='post'>
+                <input class='warning' type='submit' name='delete_playlist' value='Delete'>
+            </form>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
