--- a/templates/publicplaylists.html
+++ b/templates/publicplaylists.html
@@ -29,6 +29,7 @@
                     {{playlist.name}}
                 </a>
             </h2>
+            <h4>By {{playlist.user.name}}</h4>
 
             <div class='playlist-description'>
                 <h3 class='playlist-description'>Description: </h3>
