--- a/templates/deletesong.html
+++ b/templates/deletesong.html
@@ -8,12 +8,13 @@
     </h3>
     <h4 class='warning'>This cannot be undone</h4>
     <div class='row'>
-        <div class='col-md-offset-5 col-md-1'>
+        <div class='col-md-offset-4 col-md-1'>
             <a href="{{url_for('showSingle', playlist_id = song.playlist_id, song_id = song.id)}}">Cancel</a>
         </div>
-        <div class='col-md-1'>
+        <div class='col-md-1 col-md-offset-2'>
             <form method='post'>
-                <input class='warning inline' type='submit' name='delete_song' value='Delete'>
+                <input class='warning inline' type='submit'
+                    name='delete_song' value='Delete'>
             </form>
         </div>
 
