--- a/templates/publicsongs.html
+++ b/templates/publicsongs.html
@@ -28,31 +28,44 @@
 	</div>
 	<br>
     <br>
+	<div class='container-fluid'>
+		<div class='row'>
+			{% if songs !=[] %}
+				{% for song in songs %}
+				<div class='songs'>
+					{% if song.youtube %}
+					<div class='col-md-offset-2 col-md-4'>
+						<div class="post-youtube-playlist">
+						   <iframe
+								class='youtube-iframe-playlist'
+								src="https://www.youtube.com/embed/{{song.youtube}}"
+								frameborder="0" allowfullscreen>
+							</iframe>
+					   </div>
+				   </div>
+				   {% endif %}
+					<div class='col-md-6 text-left'>
+						<a href="{{url_for('showSingle', playlist_id = song.playlist_id, song_id = song.id)}}">
+							<h3>{{song.title}}</h3>
+						</a>
+						<p>By: {{song.artist}}</p>
+						{% if song.genre %}
+						<p>Gere: {{song.genre}}</p>
+						{% endif %}
+						{% if song.rendition %}
+							<p>Rendition of: {{song.rendition}}</p>
+						{% endif %}
 
-	<div class='songs col-md-offset-1'>
-        <div class='text-center'>
 
-        </div>
-		{% if songs !=[] %}
-			{% for song in songs %}
-			<div>
-				<a href="{{url_for('showSingle', playlist_id = song.playlist_id, song_id = song.id)}}">
-					<h3>{{song.title}}</h3>
-				</a>
-				<p>By: {{song.artist}}</p>
-				<p>Gere: {{song.genre}}</p>
-				{% if song.youtube %}
-					<p>Youtube Link: {{song.youtube}}</p>
-				{% endif %}
-				{% if song.rendition %}
-					<p>Rendition of: {{song.rendition}}
-				{% endif %}
+					</div>
 
-			</div>
-			<hr>
-			<br>
-			{% endfor %}
-		{% endif %}
+				</div>
+				<hr>
+				<br>
+				<br>
+				{% endfor %}
+			{% endif %}
+		</div>
 	</div>
 
 </div>
