--- a/templates/base.html
+++ b/templates/base.html
@@ -54,5 +54,46 @@
             {% block content %}
             {% endblock %}
         </div>
+        <div class="row foot text-center">
+            <div class="col-md-3">
+                <a href='https://ian-agpawa.appspot.com' target="_blank">
+                    <p> &copy; 2016 Ian Agpawa</p>
+                </a>
+            </div>
+            <div class="col-md-4">
+                 <i class="fa fa-google fa-f"></i> agpawaji@gmail.com
+            </div>
+            <div class="col-md-1">
+                <a href="https://github.com/ianagpawa" target="_blank"
+                    class="letter">
+                  <i class="fa fa-github-square fa-f"></i>
+                </a>
+            </div>
+            <div class="col-md-1">
+                <a href="https://twitter.com/theartilect" target="_blank"
+                    class="letter">
+                    <i class="fa fa-twitter fa-f"></i>
+                </a>
+            </div>
+
+            <div class="col-md-1">
+                <a href="http://www.freecodecamp.com/theartilect"
+                    target="_blank" class="letter">
+                   <i class="fa fa-fire fa-f"></i>
+                 </a>
+            </div>
+            <div class="col-md-1">
+                <a href="https://www.linkedin.com/in/ianagpawa"
+                    target="_blank" class="letter">
+                    <i class="fa fa-linkedin-square fa-f"></i>
+                </a>
+            </div>
+            <div class="col-md-1">
+                <a target="_blank"
+                    href="http://www.freepik.com/free-vector/wrinkled-paper-texture_851248.htm">
+                    <i class="fa fa-picture-o" aria-hidden="true"></i>
+                </a>
+            </div>
+        </div>
     </body>
 </html>
