--- a/templates/publicsongs.html
+++ b/templates/publicsongs.html
@@ -43,8 +43,41 @@
 							</iframe>
 					   </div>
 				   </div>
-				   {% endif %}
-					<div class='col-md-6 text-left'>
+				   <div class='col-md-offset-1 col-md-5 text-left'>
+					   <a href="{{url_for('showSingle', playlist_id = song.playlist_id, song_id = song.id)}}">
+						   <h3>{{song.title}}</h3>
+					   </a>
+					   <p>By: {{song.artist}}</p>
+					   {% if song.genre %}
+					   <p>Gere: {{song.genre}}</p>
+					   {% endif %}
+					   {% if song.rendition %}
+						   <p>Rendition of: {{song.rendition}}</p>
+					   {% endif %}
+
+					   <div>
+						   <a href="{{url_for('editSong',
+								   playlist_id = playlist.id,
+								   song_id = song.id)}}">
+							   Edit
+						   </a>
+						   |
+						   <a class='delete' href="{{url_for('deleteSong',
+									   playlist_id = playlist.id,
+									   song_id = song.id)}}">
+							   Delete
+						   </a>
+					   </div>
+				   </div>
+				   {% else %}
+				   <div class='col-md-offset-2 col-md-4'>
+					   <div class="post-youtube-playlist">
+						  <img
+							   class='youtube-iframe-playlist'
+							   src="http://lorempixel.com/400/200/nightlife">
+					  </div>
+				  </div>
+					<div class='col-md-offset-1 col-md-5 text-left'>
 						<a href="{{url_for('showSingle', playlist_id = song.playlist_id, song_id = song.id)}}">
 							<h3>{{song.title}}</h3>
 						</a>
@@ -56,12 +89,23 @@
 							<p>Rendition of: {{song.rendition}}</p>
 						{% endif %}
 
-
+		                <div>
+		                    <a href="{{url_for('editSong',
+		                            playlist_id = playlist.id,
+		                            song_id = song.id)}}">
+		                        Edit
+		                    </a>
+							|
+		                    <a class='delete' href="{{url_for('deleteSong',
+		                                playlist_id = playlist.id,
+		                                song_id = song.id)}}">
+		                        Delete
+		                    </a>
+		                </div>
 					</div>
-
+					{% endif %}
 				</div>
 				<hr>
-				<br>
 				<br>
 				{% endfor %}
 			{% endif %}
