--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
-
 <div class='col-md-offset-4 col-md-4 text-center login-page'>
+    <div class='text-center'>
+        <h3>Log in with either Google or Facebook</h3>
+    </div>
+    <br>
+    <br>
     <div id='signinButton'>
         <span class='g-signin'
             data-scope="openid email"
-            data-clientid ="549500421803-6fd629ri7qolkfvbn65gqo8schpid63n.apps.googleusercontent.com"
+            data-clientid ="736076626457-55uu1ocavdc345lhgmbo193vhkk589mu.apps.googleusercontent.com"
             data-redirecturi="postmessage"
             data-accesstype ="offline"
             data-cookiepolicy="single_host_origin"
