--- a/templates/single.html
+++ b/templates/single.html
@@ -12,6 +12,11 @@
             frameborder="0" allowfullscreen>
         </iframe>
    </div>
+   {% else %}
+   <div class="post-youtube">
+       <img class='placeholder-img'
+            src="http://lorempixel.com/800/500/nightlife">
+  </div>
    {% endif %}
 
 
