--- a/templates/base.html
+++ b/templates/base.html
@@ -12,17 +12,21 @@
            href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
            integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
            crossorigin="anonymous">
-       <link
+        <link
            href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
            rel="stylesheet"
            integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
            crossorigin="anonymous">
 
-       <link type='text/css' rel="stylesheet" href="/static/styles/main.css">
-
-       <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
-       </script>
-       <script src="https://apis.google.com/js/client:platform.js?onload=start"
+        <link type='text/css' rel="stylesheet" href="/static/styles/main.css">
+        <script
+            src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous">
+        </script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
+        </script>
+        <script src="https://apis.google.com/js/client:platform.js?onload=start"
             async defer>
         </script>
         <script src="//apis.google.com/js/platform.js?onload=start"></script>
