--- a/templates/newplaylist.html
+++ b/templates/newplaylist.html
@@ -2,6 +2,20 @@
 {% block content %}
 
 <div class='container-fluid'>
+    <div class='col-md-offset-4 col-md-4 text-center'>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li><strong>{{message}}</strong></li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+    {% endwith %}
+    </div>
+    <br>
+    </div>
+    <br>
     <div class='col-md-6 col-md-offset-3 text-center'>
         <h1>Add New Playlist</h1>
         <form method='post'>
