--- a/templates/newsong.html
+++ b/templates/newsong.html
@@ -3,6 +3,18 @@
 
 <div class='container-fluid'>
     <div class='col-md-6 col-md-offset-3 text-center'>
+        <div class='col-md-offset-4 col-md-4 text-center'>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            <ul>
+                {% for message in messages %}
+                <li><strong>{{message}}</strong></li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+        {% endwith %}
+        </div>
+        <br>
         <h1>{{playlist.name}}</h1>
         <h3>Add a song</h3>
         <form method='post'>
