--- a/templates/newplaylist.html
+++ b/templates/newplaylist.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class='container-fluid'>
-    <div class='col-md-offset-4 col-md-4 text-center'>
+    <div class='col-md-offset-4 col-md-4 flash text-center'>
     {% with messages = get_flashed_messages() %}
         {% if messages %}
         <ul>
