--- a/templates/editplaylist.html
+++ b/templates/editplaylist.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class='container-fluid text-center'>
-    <div class='col-md-offset-4 col-md-4 text-center'>
+    <div class='col-md-offset-4 col-md-4 flash text-center'>
     {% with messages = get_flashed_messages() %}
         {% if messages %}
         <ul>
