--- a/templates/newsong.html
+++ b/templates/newsong.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class='container-fluid'>
-    <div class='col-md-6 col-md-offset-3 text-center'>
+    <div class='col-md-6 col-md-offset-3 flash text-center'>
         <div class='col-md-offset-4 col-md-4 text-center'>
         {% with messages = get_flashed_messages() %}
             {% if messages %}
@@ -14,6 +14,7 @@
             {% endif %}
         {% endwith %}
         </div>
+        <br>
         <br>
         <h1>{{playlist.name}}</h1>
         <h3>Add a song</h3>
